--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ gen/
 # Gradle files
 .gradle/
 build/
+grade/
+gradelew
+gradelew.bat
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -30,6 +33,7 @@ proguard/
 target
 
 # Misc
+art/
 .DS_Store
 Thumbs.db
 *.swp
