--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -7,28 +7,23 @@ dependencies {
     compile 'com.squareup.dagger:dagger-compiler:1.1.0'
     compile 'com.jakewharton:butterknife:4.0.1'
     compile 'com.squareup.dagger:dagger:1.1.0'
-    compile 'com.google.android:youtube-android-player-api:1.0.0'
     compile 'com.github.pedrovgs:renderers:1.0.9'
     compile 'com.google.android.gms:play-services:4.1.32'
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
 }
 
 android {
     packagingOptions {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
-    compileSdkVersion Integer.parseInt(project.ANDROID_COMPILE_SDK_VERSION)
-    buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
-
+    compileSdkVersion 21
+    buildToolsVersion '21.0.2'
     defaultConfig {
         versionName project.VERSION_NAME
-        versionCode Integer.parseInt(project.VERSION_CODE)
-
         targetSdkVersion Integer.parseInt(project.ANDROID_TARGET_SDK_VERSION)
+        minSdkVersion 14
     }
-
-
-
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
@@ -36,8 +31,9 @@ android {
             res.srcDirs = ['res']
         }
     }
-
     lintOptions {
         abortOnError false
+    }
+    productFlavors {
     }
 }
